# pb-backend

./: .env.example  Cargo.toml
src/: main.rs
src/handlers/: account_handler.rs  auth.rs  auth_handler.rs  inventory_handler.rs  mod.rs  shop_handler.rs
src/http/: mod.rs
src/http/query_params/: account_query_params.rs  mod.rs  shop_query_params.rs
src/http/request/: account_request.rs  auth_request.rs  inventory_request.rs  mod.rs  shop_request.rs
src/http/response/: auth_response.rs  general_response.rs
src/middlewares/: auth_middleware.rs  mod.rs
src/models/: account_model.rs  auth_model.rs  inventory_model.rs  mod.rs  response.rs  response_model.rs  shop_model.rs
src/models/request/: account_request.rs  auth_request.rs  inventory_request.rs  mod.rs
src/models/response/: auth_response.rs  mod.rs
src/routes/: account_route.rs  auth.rs  auth_route.rs  inventory_route.rs  mod.rs  shop_route.rs
src/template/: email_change.html  password_change.html  password_recovery.html
src/utils/: config.rs  courier.rs  datetime.rs  errors.rs  extractors.rs  fallback.rs  handler.rs  jwt.rs  mod.rs  rand.rs  response.rs
