[package]
name = "pb-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.13.0"
actix-web-httpauth = "0.8.2"
bcrypt = "0.18.0"
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.9"
futures-util = "0.3.32"
jsonwebtoken = "10.3.0"
log = "0.4.29"
sanitize-filename = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4"] }
