[package]
name = "pb-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Core
axum = { version = "0.8.8", features = ["multipart"] }
axum-extra = "0.12.5"
http = "1.4.0"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }

# DB
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Serialization 
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Auth
jsonwebtoken = "10.3.0"
bcrypt = "0.18.0"

# File Upload
tokio-util = "0.7.18"
mime = "0.3.17"

# Utils
anyhow = "1.0.102"
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.9"
futures-util = "0.3.32"
log = "0.4.29"
uuid = { version = "1.21.0", features = ["v4"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
garde = { version = "0.22.1", features = ["full"] }
thiserror = "2.0.18"
validator = { version = "0.20.0", features = ["derive"] }
