[package]
name = "pb-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Core
axum = { version = "0.8.8", features = ["multipart"] }
axum-extra = "0.12.5"
http = "1.4.0"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }

# DB
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "mac_address"] }

# Serialization 
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

#token
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
rustls = "0.23.37"
bcrypt = "0.18.0"

# File Upload
tokio-util = "0.7.18"
mime = "0.3.17"

#validation
garde = { version = "0.22.1", features = ["full"] }

#email 
lettre = { version = "0.11.19", features = ["native-tls"] }

# Utils
anyhow = "1.0.102"
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.9"
futures-util = "0.3.32"
log = "0.4.29"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
thiserror = "2.0.18"
base64 = "0.22.1"

